--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 /UnityPlayer_s.debug filter=lfs diff=lfs merge=lfs -text
+/Linux/LatestDevBuild/UnityPlayer_s.debug filter=lfs diff=lfs merge=lfs -text
