--- a/TestLocalMP/Assembly-CSharp.csproj
+++ b/TestLocalMP/Assembly-CSharp.csproj
@@ -40,6 +40,7 @@
      <Compile Include="Assets/Scripts/FollowBall.cs" />
      <Compile Include="Assets/Scripts/Respawn.cs" />
      <Compile Include="Assets/Scripts/NextLevelLogic.cs" />
+     <Compile Include="Assets/Scripts/updatePosition.cs" />
      <Compile Include="Assets/Scripts/PlayerController.cs" />
      <Compile Include="Assets/Scripts/MoveToPlayer.cs" />
     <Reference Include="UnityEngine">
@@ -262,7 +263,7 @@
         <HintPath>/home/edenjudeurias/Unity/Hub/Editor/2020.3.26f1/Editor/Data/Managed/UnityEngine/UnityEditor.UnityConnectModule.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/PackageCache/com.unity.nuget.newtonsoft-json@2.0.0/Runtime/Newtonsoft.Json.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/PackageCache/com.unity.nuget.newtonsoft-json@2.0.0/Runtime/Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
         <HintPath>/home/edenjudeurias/Unity/Hub/Editor/2020.3.26f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
@@ -610,118 +611,118 @@
         <HintPath>/home/edenjudeurias/Unity/Hub/Editor/2020.3.26f1/Editor/Data/NetStandard/compat/2.0.0/shims/netfx/mscorlib.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Animation.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Animation.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Animation.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.InternalAPIEngineBridge.001">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.InternalAPIEngineBridge.001.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.InternalAPIEngineBridge.001.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.PixelPerfect">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.2D.PixelPerfect.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.2D.PixelPerfect.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Tilemap.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll</HintPath>
     </Reference>
     <Reference Include="PsdPlugin">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/PsdPlugin.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/PsdPlugin.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualStudio.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.VisualStudio.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.VisualStudio.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Sysroot.Linux_x86_64">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.Sysroot.Linux_x86_64.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.Sysroot.Linux_x86_64.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.IK.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.2D.IK.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.2D.IK.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Sprite.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.ProBuilder">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.ProBuilder.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.ProBuilder.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Path.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Path.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Path.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Toolchain.Linux-x86_64">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.Toolchain.Linux-x86_64.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.Toolchain.Linux-x86_64.dll</HintPath>
     </Reference>
     <Reference Include="Unity.ProBuilder.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.ProBuilder.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.ProBuilder.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.InputSystem">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.InputSystem.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.InputSystem.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PlasticSCM.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.PlasticSCM.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.PlasticSCM.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.ProBuilder.AddOns.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.ProBuilder.AddOns.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.ProBuilder.AddOns.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Psdimporter.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Psdimporter.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Psdimporter.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Mathematics">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.Mathematics.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.Mathematics.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.IK.Runtime">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.2D.IK.Runtime.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.2D.IK.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.ProBuilder.AssetIdRemapUtility">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.ProBuilder.AssetIdRemapUtility.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.ProBuilder.AssetIdRemapUtility.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Animation.Triangle.Runtime">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Animation.Triangle.Runtime.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Animation.Triangle.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.InternalAPIEditorBridge.001">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.InternalAPIEditorBridge.001.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.InternalAPIEditorBridge.001.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Animation.Runtime">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Animation.Runtime.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Animation.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.PixelPerfect.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.2D.PixelPerfect.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.2D.PixelPerfect.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Mathematics.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.Mathematics.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.Mathematics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Common.Runtime">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Common.Runtime.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Common.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.SpriteShape.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.2D.SpriteShape.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.2D.SpriteShape.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Common.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Common.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.2D.Common.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.SpriteShape.Runtime">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.2D.SpriteShape.Runtime.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.2D.SpriteShape.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.SysrootPackage.Editor">
-        <HintPath>/home/edenjudeurias/TestLocalMP/Library/ScriptAssemblies/Unity.SysrootPackage.Editor.dll</HintPath>
+        <HintPath>/home/edenjudeurias/sturdy-broccoli/TestLocalMP/Library/ScriptAssemblies/Unity.SysrootPackage.Editor.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
